Fixed service files

--- a/service_files/replicant.service
+++ b/service_files/replicant.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Run Latest Release Script
-Wants=ethereum-build.timer
+Wants=replicant.timer
 
 [Service]
 ExecStart=/opt/replicant/.env/bin/python /opt/replicant/latest_release.py
