--- a/provisioning/vars.yml.sample
+++ b/provisioning/vars.yml.sample
@@ -1,5 +1,15 @@
+---
+
+# Script variables
 clone_directory: /opt/replicant
 
+# Docker variables
 docker_registry_host: registry.local
-docker_registry_listening_ip: 0.0.0.0
 docker_registry_port: 8443
+docker_registry_url: "{{ docker_registry_host }}:{{ docker_registry_port }}"
+docker_registry_listening_ip: 0.0.0.0
+
+# Jenkins variables
+jenkins_host: jenkins.local
+jenkins_port: 8080
+jenkins_listening_ip: 0.0.0.0
