--- a/dockerfiles/Dockerfile.deposit_cli
+++ b/dockerfiles/Dockerfile.deposit_cli
@@ -12,4 +12,4 @@ RUN git config advice.detachedHead false \
 RUN pip3 install -r requirements.txt
 RUN python3 setup.py install
 
-ENTRYPOINT ["./deposit.sh", "--mnemonic_language=english"]
+ENTRYPOINT ["./deposit.sh"]
