Changed rust to 1.50-slim-buster

--- a/dockerfiles/Dockerfile.lighthouse
+++ b/dockerfiles/Dockerfile.lighthouse
@@ -1,4 +1,4 @@
-FROM rust:slim-buster AS builder
+FROM rust:1.50-slim-buster AS builder
 ARG RELEASE=master
 
 RUN apt-get update && apt-get install -y cmake \
