--- a/dockerfiles/Dockerfile.prysm
+++ b/dockerfiles/Dockerfile.prysm
@@ -14,15 +14,15 @@ RUN git config advice.detachedHead false \
     && git checkout $RELEASE
 
 # Build the binaries
-RUN bazel build --config=release //beacon-chain:beacon-chain
-RUN bazel build --config=release //validator:validator
-RUN bazel build --config=release //slasher:slasher
+RUN bazel build --config=release //cmd/beacon-chain:beacon-chain
+RUN bazel build --config=release //cmd/validator:validator
+RUN bazel build --config=release //cmd/slasher:slasher
 
 # Copy the binaries out to the root folder.
 # This is done so that we do not have to use git checkout in the final image.
-RUN cp bazel-bin/beacon-chain/beacon-chain_/beacon-chain /beacon
-RUN cp bazel-bin/validator/validator_/validator /validator
-RUN cp bazel-bin/slasher/slasher_/slasher /slasher
+RUN cp bazel-bin/cmd/beacon-chain/beacon-chain_/beacon-chain /beacon
+RUN cp bazel-bin/cmd/validator/validator_/validator /validator
+RUN cp bazel-bin/cmd/slasher/slasher_/slasher /slasher
 
 # Build the final image
 FROM debian:buster-slim
@@ -30,8 +30,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder /prysm/bazel-bin/beacon-chain/beacon-chain_/beacon-chain /usr/local/bin/beacon
-COPY --from=builder /prysm/bazel-bin/validator/validator_/validator /usr/local/bin/validator
-COPY --from=builder /prysm/bazel-bin/slasher/slasher_/slasher /usr/local/bin/slasher
+COPY --from=builder /prysm/bazel-bin/cmd/beacon-chain/beacon-chain_/beacon-chain /usr/local/bin/beacon
+COPY --from=builder /prysm/bazel-bin/cmd/validator/validator_/validator /usr/local/bin/validator
+COPY --from=builder /prysm/bazel-bin/cmd/slasher/slasher_/slasher /usr/local/bin/slasher
 
 EXPOSE 4000 8080 13000 12000/udp
