--- a/dockerfiles/Dockerfile.lighthouse
+++ b/dockerfiles/Dockerfile.lighthouse
@@ -1,27 +1,3 @@
-FROM rust:1.50-slim-buster AS builder
-ARG RELEASE=master
-
-RUN apt-get update && apt-get install -y cmake \
-    git \
-    wget \
-    curl \
-    build-essential \
-    && git clone https://github.com/sigp/lighthouse.git
-WORKDIR lighthouse
-RUN git config advice.detachedHead false \
-    && git fetch --all --tags \
-    && git checkout $RELEASE
-
-# Build lighthouse
-RUN make && make install-lcli
-
-FROM debian:latest
-RUN apt-get update && apt-get install -y --no-install-recommends \
-  libssl-dev \
-  ca-certificates \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
-COPY --from=builder /usr/local/cargo/bin/lighthouse /usr/local/bin/lighthouse
-COPY --from=builder /usr/local/cargo/bin/lcli /usr/local/bin/lcli
+FROM sigp/lighthouse
 
 EXPOSE 9000/tcp 9000/udp 5052/tcp
