--- a/dockerfiles/Dockerfile.utility
+++ b/dockerfiles/Dockerfile.utility
@@ -1,4 +1,4 @@
-FROM debian:latest
+FROM golang:buster
 ARG RELEASE=master
 
 RUN apt-get update && apt-get install -y inetutils-ping \
@@ -8,8 +8,5 @@ RUN apt-get update && apt-get install -y inetutils-ping \
     build-essential \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
-# Install Go
-RUN wget -c https://golang.org/dl/go1.15.3.linux-amd64.tar.gz -O - | \
-    tar -xz -C /usr/local
-ENV PATH="${PATH}:/usr/local/go/bin:/root/go/bin"
-RUN GO111MODULE=on go get github.com/wealdtech/ethdo@$RELEASE
+# Install Ethdo
+RUN go install github.com/wealdtech/ethdo@$RELEASE
