--- a/dockerfiles/Dockerfile.go_ethereum
+++ b/dockerfiles/Dockerfile.go_ethereum
@@ -1,5 +1,5 @@
 # Build Geth in go builder container
-FROM golang:1.15-buster as builder
+FROM golang:1.18-buster as builder
 ARG RELEASE=master
 
 RUN apt-get update && apt-get install -y build-essential \
@@ -22,3 +22,34 @@ COPY --from=builder /go/go-ethereum/build/bin/geth /usr/local/bin/geth
 
 EXPOSE 8545 8546 30303 30303/udp
 ENTRYPOINT ["geth"]
+
+
+# ARG RELEASE=master
+# # Support setting various labels on the final image
+# ARG COMMIT=""
+# ARG VERSION=""
+# ARG BUILDNUM=""
+
+# # Build Geth in a stock Go builder container
+# FROM golang:1.18-alpine as builder
+
+# RUN apk add --no-cache gcc musl-dev linux-headers git
+
+# ADD . /go-ethereum
+# RUN cd /go-ethereum && go run build/ci.go install ./cmd/geth
+
+# # Pull Geth into a second stage deploy alpine container
+# FROM alpine:latest
+
+# RUN apk add --no-cache ca-certificates
+# COPY --from=builder /go-ethereum/build/bin/geth /usr/local/bin/
+
+# EXPOSE 8545 8546 30303 30303/udp
+# ENTRYPOINT ["geth"]
+
+# # Add some metadata labels to help programatic image consumption
+# ARG COMMIT=""
+# ARG VERSION=""
+# ARG BUILDNUM=""
+
+# LABEL commit="$COMMIT" version="$VERSION" buildnum="$BUILDNUM"
