--- a/dockerfiles/Dockerfile.go_ethereum
+++ b/dockerfiles/Dockerfile.go_ethereum
@@ -1,5 +1,5 @@
 # Build Geth in go builder container
-FROM golang:1.18-buster as builder
+FROM golang:bullseye as builder
 ARG RELEASE=master
 
 RUN apt-get update && apt-get install -y build-essential \
